[previewjob] Properly pass filename to createThumbnail

fileUrl.toString() results in a string with file:// prefix, but we want a path

BUG: 490827